tests/baselines/reference/overloadOnConstConstraintChecks3.errors.txt
overloadOnConstConstraintChecks3.ts(10,5): error TS2322: Type 'null' is not assignable to type 'A'.


==== overloadOnConstConstraintChecks3.ts (1 errors) ====
    class A { private x = 1} 
    class B extends A {}
    class C extends A {
        public foo() { }
    }
    function foo(name: 'hi'): B;
    function foo(name: 'bye'): C;
    function foo(name: string): A;
    function foo(name: any): A {
        return null;
        ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'A'.
    }
    